Organize the code more

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -3,6 +3,7 @@
     <body>
         <section id="navbar">
             <ul>
+                <!-- Navigation can be better to inform users, visually it is not appealing -->
                 <li><a href="/">Shorten URL</a></li>
                 <li><a href="/search">Search URL</a></li>
             </ul>
